[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "counter"
version = "1.0.1"
authors = [
  { name="Andrey Baykov", email="baykov.andrey@gmail.com" },
]
description = "Counter of unique letter in text"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://git.foxminded.com.ua/foxstudent102533/task-3-collection-framework"

